Fixed scroll bar and menu overlapping

--- a/src/App.css
+++ b/src/App.css
@@ -37,8 +37,6 @@
 .right {
   grid-area: 1/2/1/2;
   height: 100vh;
-  overflow: scroll;
-  scroll-behavior: smooth;
 }
 
 
